--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     (function () {
       const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
       const setting = localStorage.getItem('vueuse-color-scheme') || 'auto'
-      if (setting === 'dark' || (prefersDark && setting !== 'light'))
+      if (setting === 'dark' || (prefersDark && setting !== 'light')){}
         //document.documentElement.classList.toggle('dark', true)
         //document.documentElement.classList.add('dark')
-    })()
+    })();
   </script>
 </head>
 <body class="font-sans">
