--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         document.documentElement.classList.toggle('dark', true)
     })()
   </script>
-
+  <script src="https://unpkg.com/crunker@latest/dist/crunker.js"></script>
+  <script>
+    window.Crunker = window.Crunker.default
+  </script>
 </head>
 <body class="font-sans">
   <div id="app"></div>
