--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
     (function () {
       const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
       const setting = localStorage.getItem('vueuse-color-scheme') || 'auto'
-      if (setting === 'dark' || (prefersDark && setting !== 'light'))
-        document.documentElement.classList.toggle('dark', true)
-    })()
+      if (setting === 'dark' || (prefersDark && setting !== 'light')) {
+        // document.documentElement.classList.toggle('dark', true)
+      }
+      setTimeout(() => {
+        document.documentElement.classList.add('dark')
+      }, 1000)
+})()
   </script>
   <script src="https://unpkg.com/crunker@latest/dist/crunker.js"></script>
   <script>
     window.Crunker = window.Crunker.default
   </script>
 </head>
-<body class="font-sans">
+<body class="font-sans dark">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
   <noscript>This website requires JavaScript to function properly. Please enable JavaScript to continue.</noscript>
